--- a/website/pages/docs/sdk/sdk.mdx
+++ b/website/pages/docs/sdk/sdk.mdx
@@ -5,18 +5,30 @@ import { Tabs, Tab } from 'nextra-theme-docs'
     <Tab>
 ```typescript copy filename="nestia.config.ts" showLineNumbers
 import { INestiaConfig } from "@nestia/sdk";
+import { NestFactory } from "@nestjs/core";
 
-const config: INestiaConfig = {
-    input: "src/controllers",
+import { YourModule } from "./src/YourModule";
+
+const NESTIA_CONFIG: INestiaConfig = {
+    input: async () => {
+        const app = await NestFactory.create(YourModule);
+        // app.setGlobalPrefix("api");
+        // app.enableVersioning({
+        //     type: VersioningType.URI,
+        //     prefix: "v", 
+        // })
+        return app;
+    },
     output: "src/api",
     distribute: "packages/api",
 };
-export default config;
+export default NESTIA_CONFIG;
 ```
     </Tab>
     <Tab>
 ```bash filename="Terminal" showLineNumbers {}
 npx nestia sdk
+npx nestia sdk --config another.config.ts
 ```
     </Tab>
     <Tab>
@@ -101,19 +113,32 @@ Isn't it look like much more convenient and safer than before when using [Swagge
     <code>INestiaConfig.ts</code>
 ]}>
     <Tab>
-```typescript copy filename="nestia.config.ts" showLineNumbers {4-5}
+```typescript copy filename="nestia.config.ts" showLineNumbers {7-16}
 import { INestiaConfig } from "@nestia/sdk";
+import { NestFactory } from "@nestjs/core";
 
-const config: INestiaConfig = {
-    input: "src/controllers",
+import { YourModule } from "./src/YourModule";
+
+const NESTIA_CONFIG: INestiaConfig = {
+    input: async () => {
+        const app = await NestFactory.create(YourModule);
+        // app.setGlobalPrefix("api");
+        // app.enableVersioning({
+        //     type: VersioningType.URI,
+        //     prefix: "v", 
+        // })
+        return app;
+    },
     output: "src/api",
     distribute: "packages/api",
 };
-export default config;
+export default NESTIA_CONFIG;
 ```
     </Tab>
     <Tab>
-```typescript copy filename="INestiaConfig.ts" showLineNumbers {18-28}
+```typescript copy filename="INestiaConfig.ts" showLineNumbers {13-32}
+import type { INestApplication } from "@nestjs/common";
+
 import type { ISwagger } from "./structures/ISwagger";
 import type { ISwaggerInfo } from "./structures/ISwaggerInfo";
 import type { ISwaggerSecurityScheme } from "./structures/ISwaggerSecurityScheme";
@@ -125,16 +150,18 @@ import type { ISwaggerSecurityScheme } from "./structures/ISwaggerSecurityScheme
  */
 export interface INestiaConfig {
     /**
-     * Building `swagger.json` is also possible.
+     * Accessor of controller classes.
      *
-     * If not specified, you can't build the `swagger.json`.
+     * You can specify it within two ways
+     *
+     *   - Asynchronous function returning `INestApplication` instance
+     *   - Specify the path or directory of controller class files
      */
-    swagger?: INestiaConfig.ISwaggerConfig;
-
-    /**
-     * List of files or directories containing the NestJS controller classes.
-     */
-    input: string | string[] | INestiaConfig.IInput;
+    input:
+        | (() => Promise<INestApplication>)
+        | INestiaConfig.IInput
+        | string[]
+        | string;
 
     /**
      * Output directory that SDK would be placed in.
@@ -142,6 +169,13 @@ export interface INestiaConfig {
      * If not configured, you can't build the SDK library.
      */
     output?: string;
+
+    /**
+     * Building `swagger.json` is also possible.
+     *
+     * If not specified, you can't build the `swagger.json`.
+     */
+    swagger?: INestiaConfig.ISwaggerConfig;
 
     /**
      * Target directory that SDK distribution files would be placed in.
@@ -339,19 +373,48 @@ At first, create `nestia.config.ts` file through `npx nestia init` command. It w
 
 At least, you've to configure those two properties:
 
-  - `input`: Path of controller files
+  - `input`: Accessor of controller classes
   - `output`: Path of output directory for SDK library
 
 When you've completed above configuration, just run `npx nestia sdk` command. Then, SDK library would be newly generated, and placed into the `$config.output` directory following your `nestia.config.ts` configuration.
 
-By the way, if your controller files are separated into multiple directories, you can choose two options. First is listing up every directories, and second is using regex expression. Also, you can exclude some special directories or files using `exclude` option. Of course, you can mix all of these options like below:
+By the way, `nestia.config.ts` supports alternative options specifying the target controller classes instead of using the `Module` instance. If your backend application server does not have special configuration like `setGlobalPrefix`, `enableVersioning` and `RouterModule`, it is okay to specifying the target controller classes just by writing their file path like below.
 
-<Tabs items={['List up every directories', 'Use regex pattern', 'Exclude']}>
+<Tabs items={[
+        'Module',
+        'Directory', 
+        'Pattern', 
+        'Exclude'
+    ]}
+    defaultIndex={1}>
+    <Tab>
+```typescript copy filename="nestia.config.ts" showLineNumbers {7-15}
+import { INestiaConfig } from "@nestia/sdk";
+import { NestFactory } from "@nestjs/core";
+
+import { YourModule } from "./src/YourModule";
+
+const NESTIA_CONFIG: INestiaConfig = {
+    input: async () => {
+        const app = await NestFactory.create(YourModule);
+        // app.setGlobalPrefix("api");
+        // app.enableVersioning({
+        //     type: VersioningType.URI,
+        //     prefix: "v", 
+        // })
+        return app;
+    },
+    output: "src/api",
+    distribute: "packages/api",
+};
+export default NESTIA_CONFIG;
+```
+    </Tab>
     <Tab>
 ```typescript copy filename="nestia.config.ts" showLineNumbers {4-8}
 import { INestiaConfig } from "@nestia/sdk";
 
-const config: INestiaConfig = {
+const NESTIA_CONFIG: INestiaConfig = {
     input: [
         "src/controllers", 
         "src/fake/controllers", 
@@ -360,33 +423,34 @@ const config: INestiaConfig = {
     output: "src/api",
     distribute: "packages/api",
 };
-export default config;
+export default NESTIA_CONFIG;
 ```
     </Tab>
     <Tab>
 ```typescript copy filename="nestia.config.ts" showLineNumbers {4}
 import { INestiaConfig } from "@nestia/sdk";
 
-const config: INestiaConfig = {
+const NESTIA_CONFIG: INestiaConfig = {
     input: "src/**/*.controller.ts",
     output: "src/api",
     distribute: "packages/api",
 };
-export default config;
+export default NESTIA_CONFIG;
 ```
     </Tab>
     <Tab>
 ```typescript copy filename="nestia.config.ts" showLineNumbers {4-7}
 import { INestiaConfig } from "@nestia/sdk";
 
-const config: INestiaConfig = {
+const NESTIA_CONFIG: INestiaConfig = {
     input: {
         include: ["src/controllers"],
         exclude: ["src/**/*.fake.ts"],
     },
     output: "src/api",
+    distribute: "packages/api",
 };
-export default config;
+export default NESTIA_CONFIG;
 ```
     </Tab>
 </Tabs>
@@ -502,11 +566,22 @@ export namespace login {
     <code>IPropagation.ts</code>
 ]}>
     <Tab>
-```typescript copy filename="nestia.config.ts" showLineNumbers {6}
+```typescript copy filename="nestia.config.ts" showLineNumbers {17}
 import { INestiaConfig } from "@nestia/sdk";
+import { NestFactory } from "@nestjs/core";
+
+import { YourModule } from "./src/YourModule";
 
 const config: INestiaConfig = {
-    input: "src/controllers",
+    input: async () => {
+        const app = await NestFactory.create(YourModule);
+        // app.setGlobalPrefix("api");
+        // app.enableVersioning({
+        //     type: VersioningType.URI,
+        //     prefix: "v", 
+        // })
+        return app;
+    },
     output: "src/api",
     propagate: true,
     distribute: "packages/api",
@@ -753,15 +828,26 @@ if (output.success) {
 
 
 ## Distribution
-```typescript copy filename="nestia.config.ts" showLineNumbers {6}
+```typescript copy filename="nestia.config.ts" showLineNumbers {17}
 import { INestiaConfig } from "@nestia/sdk";
- 
-const config: INestiaConfig = {
-    input: "src/controllers",
+import { NestFactory } from "@nestjs/core";
+
+import { YourModule } from "./src/YourModule";
+
+const NESTIA_CONFIG: INestiaConfig = {
+    input: async () => {
+        const app = await NestFactory.create(YourModule);
+        // app.setGlobalPrefix("api");
+        // app.enableVersioning({
+        //     type: VersioningType.URI,
+        //     prefix: "v", 
+        // })
+        return app;
+    },
     output: "src/api",
     distribute: "packages/api",
 };
-export default config;
+export default NESTIA_CONFIG;
 ```
 
 The best to way to distributing SDK library is just publishing as an NPM module.
@@ -813,8 +899,8 @@ Also, if your SDK library utilize special alias `paths`, you also need to custom
     "ts-patch": "^3.0.2"
   },
   "dependencies": {
-    "@nestia/fetcher": "^2.0.0",
-    "typia:: "^5.1.3"
+    "@nestia/fetcher": "^2.3.0",
+    "typia:: "^5.2.2"
   },
   "files": [
     "lib",
