--- a/website/pages/docs/sdk/sdk.mdx
+++ b/website/pages/docs/sdk/sdk.mdx
@@ -900,7 +900,7 @@ Also, if your SDK library utilize special alias `paths`, you also need to custom
   },
   "dependencies": {
     "@nestia/fetcher": "^2.3.0",
-    "typia:: "^5.2.2"
+    "typia": "^5.2.3"
   },
   "files": [
     "lib",
