--- a/website/pages/docs/sdk/sdk.mdx
+++ b/website/pages/docs/sdk/sdk.mdx
@@ -28,7 +28,7 @@ export default NESTIA_CONFIG;
     <Tab>
 ```bash filename="Terminal" showLineNumbers {}
 npx nestia sdk
-npx nestia sdk --config another.config.ts
+npx nestia sdk --config nestia.config.ts --project tsconfig.json
 ```
     </Tab>
     <Tab>
@@ -255,15 +255,6 @@ export interface INestiaConfig {
      * @default true
      */
     primitive?: boolean;
-
-    /**
-     * Location of `tsconfig.json` file.
-     *
-     * If be configured, target file will replace the `tsconfig.json` file.
-     *
-     * @default tsconfig.json
-     */
-    project?: string;
 
     /**
      * Whether to assert parameter types or not.
@@ -899,7 +890,7 @@ Also, if your SDK library utilize special alias `paths`, you also need to custom
     "ts-patch": "^3.0.2"
   },
   "dependencies": {
-    "@nestia/fetcher": "^2.3.0",
+    "@nestia/fetcher": "^2.3.2",
     "typia": "^5.2.3"
   },
   "files": [
